--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,16 @@
             android:layout_weight="0"
             android:src="@drawable/choose_wisely" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/play"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0"
+            android:onClick="playPressed"/>
+
     </LinearLayout>
+
+
 </RelativeLayout>
